docs/3.0.12/_sources/api/gwpy.timeseries.StateVector.rst.txt


StateVector
===========================

.. currentmodule:: gwpy.timeseries

.. autoclass:: StateVector
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~StateVector.T
      ~StateVector.base
      ~StateVector.bits
      ~StateVector.boolean
      ~StateVector.cgs
      ~StateVector.channel
      ~StateVector.ctypes
      ~StateVector.data
      ~StateVector.device
      ~StateVector.dt
      ~StateVector.dtype
      ~StateVector.duration
      ~StateVector.dx
      ~StateVector.epoch
      ~StateVector.equivalencies
      ~StateVector.flags
      ~StateVector.flat
      ~StateVector.imag
      ~StateVector.info
      ~StateVector.isscalar
      ~StateVector.itemset
      ~StateVector.itemsize
      ~StateVector.mT
      ~StateVector.name
      ~StateVector.nbytes
      ~StateVector.ndim
      ~StateVector.newbyteorder
      ~StateVector.ptp
      ~StateVector.real
      ~StateVector.sample_rate
      ~StateVector.shape
      ~StateVector.si
      ~StateVector.size
      ~StateVector.span
      ~StateVector.strides
      ~StateVector.t0
      ~StateVector.times
      ~StateVector.unit
      ~StateVector.value
      ~StateVector.x0
      ~StateVector.xindex
      ~StateVector.xspan
      ~StateVector.xunit

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~StateVector.abs
      ~StateVector.all
      ~StateVector.any
      ~StateVector.append
      ~StateVector.argmax
      ~StateVector.argmin
      ~StateVector.argpartition
      ~StateVector.argsort
      ~StateVector.astype
      ~StateVector.byteswap
      ~StateVector.choose
      ~StateVector.clip
      ~StateVector.compress
      ~StateVector.conj
      ~StateVector.conjugate
      ~StateVector.copy
      ~StateVector.crop
      ~StateVector.cumprod
      ~StateVector.cumsum
      ~StateVector.decompose
      ~StateVector.diagonal
      ~StateVector.diff
      ~StateVector.dot
      ~StateVector.dump
      ~StateVector.dumps
      ~StateVector.ediff1d
      ~StateVector.fetch
      ~StateVector.fetch_open_data
      ~StateVector.fill
      ~StateVector.find
      ~StateVector.flatten
      ~StateVector.from_lal
      ~StateVector.from_nds2_buffer
      ~StateVector.from_pycbc
      ~StateVector.get
      ~StateVector.get_bit_series
      ~StateVector.getfield
      ~StateVector.inject
      ~StateVector.insert
      ~StateVector.is_compatible
      ~StateVector.is_contiguous
      ~StateVector.item
      ~StateVector.max
      ~StateVector.mean
      ~StateVector.median
      ~StateVector.min
      ~StateVector.nonzero
      ~StateVector.override_unit
      ~StateVector.pad
      ~StateVector.partition
      ~StateVector.plot
      ~StateVector.prepend
      ~StateVector.prod
      ~StateVector.put
      ~StateVector.ravel
      ~StateVector.read
      ~StateVector.repeat
      ~StateVector.resample
      ~StateVector.reshape
      ~StateVector.resize
      ~StateVector.round
      ~StateVector.searchsorted
      ~StateVector.setfield
      ~StateVector.setflags
      ~StateVector.shift
      ~StateVector.sort
      ~StateVector.squeeze
      ~StateVector.std
      ~StateVector.step
      ~StateVector.sum
      ~StateVector.swapaxes
      ~StateVector.take
      ~StateVector.to
      ~StateVector.to_device
      ~StateVector.to_dqflags
      ~StateVector.to_lal
      ~StateVector.to_pycbc
      ~StateVector.to_string
      ~StateVector.to_value
      ~StateVector.tobytes
      ~StateVector.tofile
      ~StateVector.tolist
      ~StateVector.tostring
      ~StateVector.trace
      ~StateVector.transpose
      ~StateVector.update
      ~StateVector.value_at
      ~StateVector.var
      ~StateVector.view
      ~StateVector.write
      ~StateVector.zip

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: T
   .. autoattribute:: base
   .. autoattribute:: bits
   .. autoattribute:: boolean
   .. autoattribute:: cgs
   .. autoattribute:: channel
   .. autoattribute:: ctypes
   .. autoattribute:: data
   .. autoattribute:: device
   .. autoattribute:: dt
   .. autoattribute:: dtype
   .. autoattribute:: duration
   .. autoattribute:: dx
   .. autoattribute:: epoch
   .. autoattribute:: equivalencies
   .. autoattribute:: flags
   .. autoattribute:: flat
   .. autoattribute:: imag
   .. autoattribute:: info
   .. autoattribute:: isscalar
   .. autoattribute:: itemset
   .. autoattribute:: itemsize
   .. autoattribute:: mT
   .. autoattribute:: name
   .. autoattribute:: nbytes
   .. autoattribute:: ndim
   .. autoattribute:: newbyteorder
   .. autoattribute:: ptp
   .. autoattribute:: real
   .. autoattribute:: sample_rate
   .. autoattribute:: shape
   .. autoattribute:: si
   .. autoattribute:: size
   .. autoattribute:: span
   .. autoattribute:: strides
   .. autoattribute:: t0
   .. autoattribute:: times
   .. autoattribute:: unit
   .. autoattribute:: value
   .. autoattribute:: x0
   .. autoattribute:: xindex
   .. autoattribute:: xspan
   .. autoattribute:: xunit

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: abs
   .. automethod:: all
   .. automethod:: any
   .. automethod:: append
   .. automethod:: argmax
   .. automethod:: argmin
   .. automethod:: argpartition
   .. automethod:: argsort
   .. automethod:: astype
   .. automethod:: byteswap
   .. automethod:: choose
   .. automethod:: clip
   .. automethod:: compress
   .. automethod:: conj
   .. automethod:: conjugate
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: cumprod
   .. automethod:: cumsum
   .. automethod:: decompose
   .. automethod:: diagonal
   .. automethod:: diff
   .. automethod:: dot
   .. automethod:: dump
   .. automethod:: dumps
   .. automethod:: ediff1d
   .. automethod:: fetch
   .. automethod:: fetch_open_data
   .. automethod:: fill
   .. automethod:: find
   .. automethod:: flatten
   .. automethod:: from_lal
   .. automethod:: from_nds2_buffer
   .. automethod:: from_pycbc
   .. automethod:: get
   .. automethod:: get_bit_series
   .. automethod:: getfield
   .. automethod:: inject
   .. automethod:: insert
   .. automethod:: is_compatible
   .. automethod:: is_contiguous
   .. automethod:: item
   .. automethod:: max
   .. automethod:: mean
   .. automethod:: median
   .. automethod:: min
   .. automethod:: nonzero
   .. automethod:: override_unit
   .. automethod:: pad
   .. automethod:: partition
   .. automethod:: plot
   .. automethod:: prepend
   .. automethod:: prod
   .. automethod:: put
   .. automethod:: ravel
   .. automethod:: read
   .. automethod:: repeat
   .. automethod:: resample
   .. automethod:: reshape
   .. automethod:: resize
   .. automethod:: round
   .. automethod:: searchsorted
   .. automethod:: setfield
   .. automethod:: setflags
   .. automethod:: shift
   .. automethod:: sort
   .. automethod:: squeeze
   .. automethod:: std
   .. automethod:: step
   .. automethod:: sum
   .. automethod:: swapaxes
   .. automethod:: take
   .. automethod:: to
   .. automethod:: to_device
   .. automethod:: to_dqflags
   .. automethod:: to_lal
   .. automethod:: to_pycbc
   .. automethod:: to_string
   .. automethod:: to_value
   .. automethod:: tobytes
   .. automethod:: tofile
   .. automethod:: tolist
   .. automethod:: tostring
   .. automethod:: trace
   .. automethod:: transpose
   .. automethod:: update
   .. automethod:: value_at
   .. automethod:: var
   .. automethod:: view
   .. automethod:: write
   .. automethod:: zip

   
   